syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/megamind/protos/common";
option java_package = "ru.yandex.alice.megamind.protos.common";

import "mapreduce/yt/interface/protos/extension.proto";

message TFrameRequestParams {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    bool DisableOutputSpeech = 1 [json_name = "disable_output_speech", (NYT.column_name) = "disable_output_speech"];
    bool DisableShouldListen = 2 [json_name = "disable_should_listen", (NYT.column_name) = "disable_should_listen"];
}
